--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "@angular/router": "^5.2.3",
     "@types/mongoose": "^5.0.2",
     "animations": "0.0.0",
-    "axios": "^0.18.0",
+    "axios": ">=0.18.1",
     "axios-mock-adapter": "^1.14.1",
     "core-js": "^2.4.1",
     "glob": "^7.1.2",
