Fix security issue

--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,7 @@
     "@types/mongoose": "^5.0.7",
     "@types/request-promise-native": "^1.0.14",
     "animations": "0.0.0",
-    "axios": "^0.17.1",
+    "axios": ">=0.18.1",
     "body-parser": "~1.16.0",
     "compression": "^1.7.1",
     "cookie-parser": "~1.4.0",
